// Vitest Snapshot v1

exports[`Generator > should emit css 1`] = `
[
  {
    "content": ".Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #3b82f6;
  border-radius: 4px 4px 4px 4px;
  overflow: hidden;
  gap: 6px;
  padding: 6px 12px 6px 12px;
  align-items: center;
  justify-content: center;
}
.Button__Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 500;
  color: #ffffff;
  text-align: left;
  flex-direction: column;
}
.Button__chevron {
  display: flex;
  position: relative;
  width: 8px;
  height: 8px;
  align-items: flex-start;
}
.Button__arrow_forward_ios {
  display: flex;
  position: absolute;
  left: 2.0833332538604736px;
  top: 0.6666666865348816px;
  width: 3.924999952316284px;
  height: 6.666666507720947px;
}
",
    "filePath": "Button.css",
  },
  {
    "content": "import \\"./Button.css\\";

export function Button(props) {
  return (
    <div {...props} className={\\"Button \\" + props.className}>
      <div className=\\"Button__Button\\">{props.text}</div>
      {props.showChevron && (
        <div className=\\"Button__chevron\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"Button__arrow_forward_ios\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": ".Form2 {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form2__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form2__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Form2.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form2.css\\";

export function Form2(props) {
  return (
    <div {...props} className={\\"Form2 \\" + props.className}>
      <div className=\\"Form2__h1_____\\">Some Form (stretch)</div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"Form2__Button\\" />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": ".Form {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form__Button {
}
",
    "filePath": "Form.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form.css\\";

export function Form(props) {
  return (
    <div {...props} className={\\"Form \\" + props.className}>
      <div className=\\"Form__h1_____\\">Some Form</div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"Form__Button\\" />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": ".Main {
  display: flex;
  position: relative;
  width: 353px;
  height: 205px;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 12px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Main__Hello__UIMix_ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.5;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Main__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Main__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Main.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Main.css\\";

export function Main(props) {
  return (
    <div {...props} className={\\"Main \\" + props.className}>
      <div className=\\"Main__Hello__UIMix_\\">Hello, UIMix!</div>
      <div className=\\"Main__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"Main__Button\\" />
    </div>
  );
}
",
    "filePath": "Main.js",
  },
  {
    "content": ".Frame2 {
  display: flex;
  position: relative;
  width: 517px;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  align-items: flex-start;
}
.Frame2__Header {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: stretch;
  width: auto;
  height: fit-content;
}
.Frame2__Frame_1 {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  flex-direction: column;
  gap: 24px;
  padding: 24px 24px 24px 24px;
  align-items: flex-start;
}
.Frame2__Hello__UIMix_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.5;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Frame2__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Frame2__Button {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
}
",
    "filePath": "Frame2.css",
  },
  {
    "content": "import \\"./Frame2.css\\";

export function Frame2(props) {
  return (
    <div {...props} className={\\"Frame2 \\" + props.className}>
      <Header productName={\\"Hello, world!\\"} className=\\"Frame2__Header\\" />
      <div className=\\"Frame2__Frame_1\\">
        <div className=\\"Frame2__Hello__UIMix_\\">Hello, UIMix!</div>
        <div className=\\"Frame2__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_\\">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          className=\\"Frame2__Button\\"
        />
      </div>
    </div>
  );
}
",
    "filePath": "Frame2.js",
  },
]
`;

exports[`Generator > should emit inline 1`] = `
[
  {
    "content": "export function Button(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#3b82f6\\",
        borderRadius: \\"4px 4px 4px 4px\\",
        overflow: \\"hidden\\",
        gap: \\"6px\\",
        padding: \\"6px 12px 6px 12px\\",
        alignItems: \\"center\\",
        justifyContent: \\"center\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 500,
          color: \\"#ffffff\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        {props.text}
      </div>
      {props.showChevron && (
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            width: \\"8px\\",
            height: \\"8px\\",
            alignItems: \\"flex-start\\",
          }}
        >
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"absolute\\",
              left: \\"2.0833332538604736px\\",
              top: \\"0.6666666865348816px\\",
              width: \\"3.924999952316284px\\",
              height: \\"6.666666507720947px\\",
            }}
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form2(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} style={{}} />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Main(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"353px\\",
        height: \\"205px\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"12px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"16px\\",
          fontWeight: 700,
          lineHeight: 1.5,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Hello, UIMix!
      </div>
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          alignSelf: \\"stretch\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"16px\\",
          fontWeight: 400,
          lineHeight: 1.5,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      />
    </div>
  );
}
",
    "filePath": "Main.js",
  },
  {
    "content": "export function Frame2(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"517px\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <Header
        productName={\\"Hello, world!\\"}
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          flexGrow: 0,
          alignSelf: \\"stretch\\",
          width: \\"auto\\",
          height: \\"fit-content\\",
        }}
      />
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          alignSelf: \\"stretch\\",
          height: \\"fit-content\\",
          flexDirection: \\"column\\",
          gap: \\"24px\\",
          padding: \\"24px 24px 24px 24px\\",
          alignItems: \\"flex-start\\",
        }}
      >
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            alignSelf: \\"stretch\\",
            height: \\"fit-content\\",
            fontFamily: \\"Inter, sans-serif\\",
            fontSize: \\"16px\\",
            fontWeight: 700,
            lineHeight: 1.5,
            color: \\"#000000\\",
            textAlign: \\"left\\",
            flexDirection: \\"column\\",
          }}
        >
          Hello, UIMix!
        </div>
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            alignSelf: \\"stretch\\",
            height: \\"fit-content\\",
            fontFamily: \\"Inter, sans-serif\\",
            fontSize: \\"16px\\",
            fontWeight: 400,
            lineHeight: 1.5,
            color: \\"#000000\\",
            textAlign: \\"left\\",
            flexDirection: \\"column\\",
          }}
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            flexGrow: 0,
            alignSelf: \\"auto\\",
            width: \\"fit-content\\",
            height: \\"fit-content\\",
          }}
        />
      </div>
    </div>
  );
}
",
    "filePath": "Frame2.js",
  },
]
`;

exports[`Generator > should emit tailwind 1`] = `
[
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Button(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-blue-500 rounded-tl rounded-tr rounded-br rounded-bl overflow-hidden gap-1.5 pt-1.5 pr-3 pb-1.5 pl-3 items-center justify-center\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] font-medium text-xs text-white\\">
        {props.text}
      </div>
      {props.showChevron && (
        <div className=\\"flex relative w-2 h-2 items-start\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"absolute left-[0.1302083283662796rem] top-[0.0416666679084301rem] w-[0.24531249701976776rem] h-[0.4166666567325592rem]\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form2(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] text-xs text-black\\">
        Some Form (stretch)
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"self-stretch w-auto\\" />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] text-xs text-black\\">
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"\\" />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Main(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-[22.0625rem] h-[12.8125rem] bg-white overflow-hidden flex-col gap-3 pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] font-bold text-base text-black\\">
        Hello, UIMix!
      </div>
      <div className=\\"self-stretch font-['Inter',sans-serif] text-base text-black\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"self-stretch w-auto\\" />
    </div>
  );
}
",
    "filePath": "Main.js",
  },
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Frame2(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-[32.3125rem] bg-white overflow-hidden flex-col items-start\\",
        props.className
      )}
    >
      <Header
        productName={\\"Hello, world!\\"}
        className=\\"flex relative flex-none self-stretch w-auto h-fit\\"
      />
      <div className=\\"flex relative self-stretch flex-col gap-6 pt-6 pr-6 pb-6 pl-6 items-start\\">
        <div className=\\"self-stretch font-['Inter',sans-serif] font-bold text-base text-black\\">
          Hello, UIMix!
        </div>
        <div className=\\"self-stretch font-['Inter',sans-serif] text-base text-black\\">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          className=\\"flex relative flex-none self-auto w-fit h-fit\\"
        />
      </div>
    </div>
  );
}
",
    "filePath": "Frame2.js",
  },
]
`;
